// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Markdown renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c3 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  text-decoration: underline;
}

@media only screen and (max-width: 768px) {
  .c1 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    font-size: 16px;
    line-height: 22px;
    max-width: 384px;
  }
}

<div
  class="c0"
>
  <div>
    <h1
      class="c1"
      id="h1"
    >
      H1
    </h1>
    <p
      class="c2"
    >
      Paragraph
    </p>
    <h2
      class="c3"
      id="h2"
    >
      H2
    </h2>
    <h3
      class="c4"
      id="h3"
    >
      H3
    </h3>
    <h4
      class="c5"
      id="h4"
    >
      H4
    </h4>
    <p
      class="c2"
    >
      <a
        class="c6"
        href="#"
      >
        a link
      </a>
    </p>
    <blockquote>
      <p
        class="c2"
      >
        i carry your heart with me
      </p>
    </blockquote>
    

    <p
      class="c2"
    >
      <img
        alt="alt text"
        class=""
        src="//v2.grommet.io/assets/IMG_4245.jpg"
        title="Markdown Image"
      />
    </p>
    <p
      class="c2"
    >
      Markdown | Less | Pretty
--- | --- | ---

      <em>
        Still
      </em>
       | 
      <code>
        renders
      </code>
       | 
      <strong>
        nicely
      </strong>
      
1 | 2 | 3
    </p>
  </div>
</div>
`;

exports[`Markdown renders without grommet wrapper 1`] = `
.c0 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c2 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c3 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  text-decoration: underline;
}

@media only screen and (max-width: 768px) {
  .c0 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    font-size: 16px;
    line-height: 22px;
    max-width: 384px;
  }
}

<div>
  <h1
    class="c0"
    id="h1"
  >
    H1
  </h1>
  <p
    class="c1"
  >
    Paragraph
  </p>
  <h2
    class="c2"
    id="h2"
  >
    H2
  </h2>
  <h3
    class="c3"
    id="h3"
  >
    H3
  </h3>
  <h4
    class="c4"
    id="h4"
  >
    H4
  </h4>
  <p
    class="c1"
  >
    <a
      class="c5"
      href="#"
    >
      a link
    </a>
  </p>
  <blockquote>
    <p
      class="c1"
    >
      i carry your heart with me
    </p>
  </blockquote>
  

  <p
    class="c1"
  >
    <img
      alt="alt text"
      class=""
      src="//v2.grommet.io/assets/IMG_4245.jpg"
      title="Markdown Image"
    />
  </p>
  <p
    class="c1"
  >
    Markdown | Less | Pretty
--- | --- | ---

    <em>
      Still
    </em>
     | 
    <code>
      renders
    </code>
     | 
    <strong>
      nicely
    </strong>
    
1 | 2 | 3
  </p>
</div>
`;

exports[`wrapper 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  font-size: 50px;
  line-height: 56px;
  max-width: 1200px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c5 {
  font-size: 34px;
  line-height: 40px;
  max-width: 816px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c6 {
  font-size: 26px;
  line-height: 32px;
  max-width: 624px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  font-weight: 600;
  overflow-wrap: break-word;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c8 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  text-decoration: underline;
}

@media only screen and (max-width: 768px) {
  .c2 {
    font-size: 34px;
    line-height: 40px;
    max-width: 816px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    font-size: 26px;
    line-height: 32px;
    max-width: 624px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    font-size: 18px;
    line-height: 24px;
    max-width: 432px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    font-size: 16px;
    line-height: 22px;
    max-width: 384px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <h1
        class="c2"
        id="h1"
      >
        H1
      </h1>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        Paragraph
      </p>
      <div
        class="c3"
      />
      <h2
        class="c5"
        id="h2"
      >
        H2
      </h2>
      <div
        class="c3"
      />
      <h3
        class="c6"
        id="h3"
      >
        H3
      </h3>
      <div
        class="c3"
      />
      <h4
        class="c7"
        id="h4"
      >
        H4
      </h4>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        <a
          class="c8"
          href="#"
        >
          a link
        </a>
      </p>
      <div
        class="c3"
      />
      <blockquote>
        <p
          class="c4"
        >
          i carry your heart with me
        </p>
      </blockquote>
      <div
        class="c3"
      />
      

      <div
        class="c3"
      />
      <p
        class="c4"
      >
        <img
          alt="alt text"
          class=""
          src="//v2.grommet.io/assets/IMG_4245.jpg"
          title="Markdown Image"
        />
      </p>
      <div
        class="c3"
      />
      <p
        class="c4"
      >
        Markdown | Less | Pretty
--- | --- | ---

        <em>
          Still
        </em>
         | 
        <code>
          renders
        </code>
         | 
        <strong>
          nicely
        </strong>
        
1 | 2 | 3
      </p>
    </div>
  </div>
</div>
`;
